--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -24,11 +24,11 @@
         <div class="row">
             <div class="col-lg-3 mt-3" *ngFor="let dt of mainData;index as i">
                 <a style="text-decoration: none; color: palevioletred;" href="#">
-                <div class="foodbox" *ngIf="i<=3">
-                    <img src="{{dt.dataImg}}" />
-                    <h1>{{dt.dataName}}</h1>
-                </div>
-              </a>
+                    <div class="foodbox" *ngIf="i<=3">
+                        <img src="{{dt.dataImg}}" />
+                        <h1>{{dt.dataName}}</h1>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -43,38 +43,44 @@
 
     <div class="Overview_of_The_Problem" id="Overview_of_The_Problem">
         <p class="text">
-            The fact that our designer goods do not represent wealth for positive utility is having more negative damage to
+            The fact that our designer goods do not represent wealth for positive utility is having more negative damage
+            to
             society than we can fathom.
             This article is going to help detail why, and detail our solution in progress.
-            As individuals, once we cover our basic needs, status becomes an intrinsic motivator in the rest of our actions.
+            As individuals, once we cover our basic needs, status becomes an intrinsic motivator in the rest of our
+            actions.
             Status comes in many forms. The healthiest / most enlightened cultures put the highest status in rewarding
             positive sum behavior.
             In global culture, luxury goods like a Gucci bag/belt have become widespread as top status symbols,
             reflecting vapid use of money as the highest form of status.
-            It has become such common Christmas list item for broke young teenagers that the richest man on the planet at
+            It has become such common Christmas list item for broke young teenagers that the richest man on the planet
+            at
             the time of this
-            writing got his riches from selling these overpriced goods representing nothing more than the ability to waste
+            writing got his riches from selling these overpriced goods representing nothing more than the ability to
+            waste
             money.
-            Collectively this misrepresentation of true status (service to others) is attributing more damage to building a
+            Collectively this misrepresentation of true status (service to others) is attributing more damage to
+            building a
             healthy
             positive culture than we can imagine.
-    
+
             Social media, our emergent global cultural production system, could be used collectively to unify humanity
             around bettering ourselves and
             others. Instead it is used to further extract youth through a false form of status as a service.
             Imagine a world where this wasteful spending was considered cancelable.
             One where we collectively take accountability for the capability to money to the positive growth of us as a
             species.
-            Imagine a world where the designer things we wore showed off spending a lot of money to make a lot of positive
+            Imagine a world where the designer things we wore showed off spending a lot of money to make a lot of
+            positive
             impact.
             If the world you imagined only went as far as to redistribute the wealth of designer wear,
             try imagining the deeper cultural effects this new alignment would have.
         </p>
-    
+
         <br>
-    
+
         <p class="highlight">
-    
+
             “Over the past hundred years we have increase the global GDP sevenfold, yet wealth inequality continues to
             skyrocket and
             luxury spending grows rapidly. In order to change the failure of redistribution of wealth at scale,
@@ -85,11 +91,11 @@
             we think this stems from the culture not supporting doing good as the highest form of status.
             We have more than enough resources, but many people without access to them,
             and a culture that motivates and glorifies overspending on vanity luxury goods.” -
-            <a  style="color: darkorchid;" href="https://jackjay.io/" target="_blank">Jack Jay</a>
-    
+            <a style="color: darkorchid;" href="https://jackjay.io/" target="_blank">Jack Jay</a>
+
         </p>
     </div>
-    
+
 
     <h2>
         <a href="">A Deeper Dive:</a>
@@ -418,15 +424,15 @@
         <br>
     </p>
 
-    <p  class="highlight">
+    <p class="highlight">
         “If only we could make love what people optimize for over wealth. We can help society at large realize that is
-        the true way to win the game of life” <a style="color: darkorchid;" href="https://jackjay.io/">-Jack Jay</a> 
+        the true way to win the game of life” <a style="color: darkorchid;" href="https://jackjay.io/">-Jack Jay</a>
         <br>
         <br>
     </p>
 
     <p>
-        
+
 
         It wasn't until our culture defined cigarettes as bad that we quit them. They are just as addicting. They become
         negative status symbols. Hopefully showing the power status has on human behavior. If you thought sex/mating
@@ -438,11 +444,11 @@
         <br>
         <br>
         If you are moved, then let’s move mountains.
-        Schedule a call 
+        Schedule a call
         <a style="text-decoration: none;  color: blueviolet;" href="https://www.calendar.com/jackjay" target="_blank">
             HERE
         </a>
-       
+
         <br>
         <br>
 
