--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,36 +7,29 @@
         <!-- nav  -->
         <div class="col-lg-4 mt-3 mb-3">
             <a routerLink="">Home</a>
-            <a routerLink="/menu">Menu</a>
-            <a routerLink="/about">About</a>
-            <a routerLink="/contact">Contact</a>
-
-        
-            
+            <a routerLink="#">About</a>
+            <a routerLink="#">Contact</a>
         </div>
-      
+
         <!-- socialmedia -->
         <div class="col-lg-3 mt-3 mb-3">
 
-            <a  href="#" target="_blank">
-                <img src="https://www.edigitalagency.com.au/wp-content/uploads/Facebook-logo-blue-circle-large-transparent-png.png" 
-                width="50px" height="50px" alt=""></a>
+            <a href="#" target="_blank">
+                <img src="https://www.edigitalagency.com.au/wp-content/uploads/Facebook-logo-blue-circle-large-transparent-png.png"
+                    width="50px" height="50px" alt=""></a>
 
             <a href="https://persistventures.com/" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" 
-                width="50px" height="50px" alt=""></a>
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="50px" height="50px" alt=""></a>
 
             <a href="#" target="_blank">
-                <img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c521.png" 
-                width="50px" height="50px" alt=""></a>
+                <img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c521.png" width="50px" height="50px"
+                    alt=""></a>
 
             <a href="#" target="_blank">
-                <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" 
-                width="50px" height="60px" alt=""></a>
-           
+                <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"
+                    width="50px" height="60px" alt=""></a>
+
         </div>
-        
+
     </div>
 </div>
-
-
